# iref

./: Cargo.toml
.github/workflows/: ci.yml
src/: common.rs  iri.rs  lib.rs  uri.rs  utils.rs
src/common/: authority_mut.rs  parse.rs  path.rs  path_mut.rs  reference.rs
src/iri/: authority.rs  authority_mut.rs  fragment.rs  path.rs  path_mut.rs  query.rs  reference.rs
src/iri/authority/: host.rs  userinfo.rs
src/iri/path/: segment.rs
src/uri/: authority.rs  authority_mut.rs  fragment.rs  path.rs  query.rs  reference.rs  scheme.rs
src/uri/authority/: host.rs  port.rs  userinfo.rs
src/uri/path/: segment.rs
