[package]
name = "iref"
version = "3.1.4"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["web-programming", "internationalization"]
keywords = ["iri", "uri", "url", "resource", "identifier"]
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
repository = "https://github.com/timothee-haudebourg/iref"
documentation = "https://docs.rs/iref"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = [ "std" ]
std = [ "pct-str/std", "static-regular-grammar/std", "thiserror" ]
no_std = [ "pct-str/no_std", "static-regular-grammar/no_std" ]
serde = ["dep:serde"]
ignore-grammars = []

[dependencies]
cfg-if = "1.0"
pct-str = { path = "../pct-str", optional = true, default-features = false }
smallvec = "1.2"
thiserror = { version = "1.0.40", optional = true }
static-regular-grammar = { path = "../static-regular-grammar", optional = true, default-features = false }
serde = { version = "1.0", optional = true }
hashbrown = { version = "0.14.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "serde"
required-features = [ "serde", "serde/derive" ]
